--- a/src/pages/app/app.css
+++ b/src/pages/app/app.css
@@ -1,10 +1,14 @@
 section {
-	height: 100dvh;
+	height: 100vh;
 	width: 100%;
-	padding: 3rem 0px;
+	padding: var(--space-m-2xl) 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.container.full-height {
+	height: 100%;
 }
 
 .spacer {
